--- a/floating_fully_qualified_project_domain_name.json
+++ b/floating_fully_qualified_project_domain_name.json
@@ -1,3 +1,3 @@
 {
-  "center_domain_name": "play-yourself-with-friends-worlds.github-pages"
+  "semi_central_domain_name": "play-yourself-with-friends-worlds.github-pages"
 }
